--- a/index.html
+++ b/index.html
@@ -125,6 +125,18 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="">
+                <img src="./assets/action-adventure/far-cry-4.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Far Cry 4</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
               <a href="./assets/action-adventure/just-cause.html">
                 <img src="./assets/action-adventure/just-cause.png" alt="" />
               </a>
@@ -149,85 +161,72 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <img src="./assets/action-adventure/lego-batman.png" alt="" />
-              <div class="box-text">
-                <h2>Lego Batman</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <img
-                src="./assets/action-adventure/lego-indiana-jones.png"
-                alt=""
-              />
-              <div class="box-text">
-                <h2>Lego Indiana Jones</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <img
-                src="./assets/action-adventure/lego-indiana-jones2.png"
-                alt=""
-              />
-              <div class="box-text">
-                <h2>Lego Indiana Jones 2</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <img
-                src="./assets/action-adventure/lego-marvel-super-heroes.png"
-                alt=""
-              />
+              <a href="">
+                <img src="./assets/action-adventure/lego-marvel-super-heroes.png" alt="" />
+              </a>
               <div class="box-text">
                 <h2>Lego Marvel Super Heroes</h2>
-                <h3>PC</h3>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <img
-                src="./assets/action-adventure/lego-pirates-of-the-caribbean.png"
-                alt=""
-              />
+              <a href="">
+                <img src="./assets/action-adventure/lego-pirates-of-the-caribbean.png" alt="" />
+              </a>
               <div class="box-text">
                 <h2>Lego Pirates of The Caribbean</h2>
-                <h3>PC</h3>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <img src="./assets/action-adventure/lego-star-wars.png" alt="" />
+              <a href="">
+                <img src="./assets/action-adventure/mafia-2.png" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Lego Star Wars</h2>
-                <h3>PC</h3>
+                <h2>Mafia II</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <img
-                src="./assets/action-adventure/lego-star-wars2.webp"
-                alt=""
-              />
+              <a href="">
+                <img src="./assets/action-adventure/tom-clancys-the-division.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Lego Star Wars II</h2>
-                <h3>PC</h3>
+                <h2>Tom Clancy's The Division<h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/action-adventure/tomb-raider.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Tomb Raider<h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/action-adventure/watch-dogs-2.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Watch Dogs 2<h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
@@ -251,48 +250,144 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/racing/4x4-evo2.png" alt="" />
               </a>
               <div class="box-text">
                 <h2>4X4 EVO 2</h2>
-                <h3>Mobile</h3>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/racing/bang-bang-racing.png" alt="" />
               </a>
               <div class="box-text">
                 <h2>Bang Bang Racing</h2>
-                <h3>PC/PS3/Xbox 360</h3>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/racing/carnage-racing.png" alt="" />
               </a>
               <div class="box-text">
                 <h2>Carnage Racing</h2>
-                <h3>PC</h3>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/racing/cars.png" alt="" />
               </a>
               <div class="box-text">
                 <h2>Cars</h2>
-                <h3>PC</h3>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/racing/downhill-domination.png" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Downhill Domination</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/racing/f1-2014.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>F1 2014</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/racing/f1-race-stars.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>F1 Race Stars</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/racing/flatout-2.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Flatout 2</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/racing/midnight-club-3-DUB-Edition.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Midnight Club 3 - DUB Edition</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/racing/moto-GP-3.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Moto GP 3</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/racing/need-for-speed-hot-pursuit.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Need For Speed Hot Pursuit</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/racing/test-drive-unlimited.png" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Test Drive Unlimited</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
@@ -476,7 +571,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/infant/ice-age-3.png" alt="" />
               </a>
               <div class="box-text">
@@ -488,7 +583,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/infant/ice-age-4.jpeg" alt="" />
               </a>
               <div class="box-text">
@@ -500,7 +595,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/infant/ratatouille.jpg" alt="" />
               </a>
               <div class="box-text">
@@ -512,7 +607,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img
                   src="./assets/infant/spongebob -squarepants-creature-from-the-krusty-krab.jpg"
                   alt=""
@@ -527,7 +622,22 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
+                <img
+                  src="./assets/infant/spongebob -squarepants-the-cosmic-shake.jpg"
+                  alt=""
+                />
+              </a>
+              <div class="box-text">
+                <h2>SpongeBob SquarePants: The Cosmic Shake</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
                 <img src="./assets/infant/toy-story-3.jpg" alt="" />
               </a>
               <div class="box-text">
@@ -556,7 +666,22 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
+                <img
+                  src="./assets/simulation/construction-machines-simulator-2016.jpg"
+                  alt=""
+                />
+              </a>
+              <div class="box-text">
+                <h2>Construction Machines Simulator 2016</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
                 <img
                   src="./assets/simulation/construction-simulator-2012.jpg"
                   alt=""
@@ -571,7 +696,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/simulation/house-builder.webp" alt="" />
               </a>
               <div class="box-text">
@@ -583,7 +708,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/simulation/hunting-2008.jpg" alt="" />
               </a>
               <div class="box-text">
@@ -595,7 +720,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/simulation/hunting-2009.jpg" alt="" />
               </a>
               <div class="box-text">
@@ -607,7 +732,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img
                   src="./assets/simulation/hunting-unlimited-2010.webp"
                   alt=""
@@ -639,7 +764,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/shooting/25-to-life.jpg" alt="" />
               </a>
               <div class="box-text">
@@ -651,7 +776,22 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
+                <img
+                  src="./assets/shooting/air-conflicts-pacific-carrier.png"
+                  alt=""
+                />
+              </a>
+              <div class="box-text">
+                <h2>Air Conflicts: Pacific Carriers</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
                 <img
                   src="./assets/shooting/arma-cold-war-assault.webp"
                   alt=""
@@ -666,7 +806,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/shooting/battle-la.jpg" alt="" />
               </a>
               <div class="box-text">
@@ -678,7 +818,7 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
+              <a href="">
                 <img src="./assets/shooting/battlefield-1.jpg" alt="" />
               </a>
               <div class="box-text">
@@ -690,12 +830,84 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
-              <a href="#">
-                <img src="./assets/shooting/battlefield-1942.png" alt="" />
+              <a href="">
+                <img src="./assets/shooting/battlefield-hardline.png" alt="" />
               </a>
               <div class="box-text">
-                <h2>Battlefield 1942</h2>
-                <h3>PC</h3>
+                <h2>Battlefield Hardline</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/shooting/brothers-in-arms-hells-highway.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Brothers in Arms: Hell's Highway</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/shooting/call-of-duty.webp" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Call of Duty</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/shooting/crysis.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Crysis</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/shooting/dogfight-1942.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Dogfight 1942</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/shooting/halo-combat-evolved.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Halo: Combat Evolved</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="">
+                <img src="./assets/shooting/medal-of-honor-warfighter.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Medal of Honor: Warfighter</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
