--- a/index.html
+++ b/index.html
@@ -477,6 +477,18 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
+                <img src="./assets/strategy/age-of-empires-iv.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Age of Empires IV</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="#">
                 <img src="./assets/strategy/age-of-mythology.jpg" alt="" />
               </a>
               <div class="box-text">
