--- a/strategy.html
+++ b/strategy.html
@@ -96,6 +96,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/strategy/age-of-empires-iv.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Age of Empires IV</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/strategy/age-of-mythology.jpg" alt="" />
           </a>
           <div class="box-text">
