--- a/racing.html
+++ b/racing.html
@@ -86,6 +86,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/aqua-moto-racing-utopia.webp" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Aqua Moto Racing Utopia</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/asphalt-streetstorm.webp" alt="" />
           </a>
           <div class="box-text">
