--- a/shooting.html
+++ b/shooting.html
@@ -1007,6 +1007,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/shooting/red-wings-american-aces.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Red Wings American Aces</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/shooting/shadow-ops-red-mercury.jpg" alt="" />
           </a>
           <div class="box-text">
