--- a/action.html
+++ b/action.html
@@ -181,12 +181,12 @@
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="#">
+          <a href="./assets/action-adventure/lego-batman.html">
             <img src="./assets/action-adventure/lego-batman.png" alt="" />
           </a>
           <div class="box-text">
             <h2>LEGO Batman</h2>
-            <h3>-</h3>
+            <h3>PC/PS2/PS3/PSP/Xbox 360/Wii</h3>
           </div>
         </div>
         <!-- Box -->
