--- a/strategy.html
+++ b/strategy.html
@@ -169,6 +169,56 @@
             <h3>-</h3>
           </div>
         </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/kingdom-rush.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Kingdom Rush</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/kingdom-rush-frontiers.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Kingdom Rush Frontiers</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/kingdom-rush-origins.webp" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Kingdom Rush Origins</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/legends-of-kingdom-rush.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Legends of Kingdom Rush</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/terra-nil.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Terra Nil</h2>
+            <h3>-</h3>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Strategy Section End-->
