--- a/strategy.html
+++ b/strategy.html
@@ -208,6 +208,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/strategy/kingdom-rush-vengeance.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Kingdom Rush Vengeance</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/strategy/legends-of-kingdom-rush.jpg" alt="" />
           </a>
           <div class="box-text">
