--- a/strategy.html
+++ b/strategy.html
@@ -188,6 +188,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/strategy/kingdom-rush-5-alliance.webp" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Kingdom Rush 5 Alliance</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/strategy/kingdom-rush-frontiers.jpg" alt="" />
           </a>
           <div class="box-text">
