--- a/strategy.html
+++ b/strategy.html
@@ -188,7 +188,7 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/strategy/kingdom-rush-5-alliance.webp" alt="" />
+            <img src="./assets/strategy/kingdom-rush-5-alliance.jpg" alt="" />
           </a>
           <div class="box-text">
             <h2>Kingdom Rush 5 Alliance</h2>
