--- a/action.html
+++ b/action.html
@@ -198,6 +198,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/action-adventure/lego-batman-2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>LEGO Batman 2: DC Super Heroes</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img
               src="./assets/action-adventure/lego-indiana-jones.png"
               alt=""
