--- a/racing.html
+++ b/racing.html
@@ -560,6 +560,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/slackers-carts-of-glory.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Slackers Carts of Glory</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/speed-racer.jpg" alt="" />
           </a>
           <div class="box-text">
