--- a/racing.html
+++ b/racing.html
@@ -580,6 +580,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/sunrise-gp.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Sunrise GP</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/test-drive-unlimited.png" alt="" />
           </a>
           <div class="box-text">
