--- a/action.html
+++ b/action.html
@@ -14,7 +14,13 @@
     />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Custom CSS-->
     <link rel="stylesheet" href="./style.css" />
@@ -95,10 +101,7 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img
-              src="./assets/action-adventure/agent-intercept.jpg"
-              alt=""
-            />
+            <img src="./assets/action-adventure/agent-intercept.jpg" alt="" />
           </a>
           <div class="box-text">
             <h2>Agent Intercept</h2>
@@ -327,6 +330,19 @@
           </a>
           <div class="box-text">
             <h2>Tom Clancy's The Division</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/action-adventure/tom-clancys-the-division-2.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Tom Clancy's The Division 2</h2>
             <h3>-</h3>
           </div>
         </div>
