--- a/racing.html
+++ b/racing.html
@@ -331,6 +331,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/horizon-chase-2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Horizon Chase 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/jungle-racers.jpg" alt="" />
           </a>
           <div class="box-text">
