--- a/action.html
+++ b/action.html
@@ -324,6 +324,19 @@
         <div class="box">
           <a href="#">
             <img
+              src="./assets/action-adventure/the-henry-stickmin-collection.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>The Henry Stickmin Collection</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
               src="./assets/action-adventure/tom-clancys-the-division.jpg"
               alt=""
             />
