--- a/action.html
+++ b/action.html
@@ -190,6 +190,16 @@
         </div>
         <!-- Box -->
         <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/just-cause-3.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Just Cause 3</h2>
+            <h3></h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
           <a href="./assets/action-adventure/lego-batman.html">
             <img src="./assets/action-adventure/lego-batman.png" alt="" />
           </a>
