--- a/racing.html
+++ b/racing.html
@@ -108,6 +108,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/art-of-rally.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Art of Rally</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/asphalt-streetstorm.webp" alt="" />
           </a>
           <div class="box-text">
