--- a/infant.html
+++ b/infant.html
@@ -14,7 +14,13 @@
     />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Custom CSS-->
     <link rel="stylesheet" href="./style.css" />
@@ -78,8 +84,21 @@
         <h2>Infantil</h2>
       </div>
       <!-- Content -->
-      <!-- Box -->
       <div class="games-content">
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/infant/home-sheep-home-farmageddon-party-edition.webp"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Home Sheep Home Farmageddon</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
         <div class="box">
           <a href="#">
             <img src="./assets/infant/ice-age-3.png" alt="" />
