--- a/strategy.html
+++ b/strategy.html
@@ -264,6 +264,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/strategy/preserve.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Preserve</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/strategy/terra-nil.jpg" alt="" />
           </a>
           <div class="box-text">
