--- a/strategy.html
+++ b/strategy.html
@@ -194,6 +194,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/strategy/bloons-td-6.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Bloons TD 6</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/strategy/bridge-constructor-stunts.jpg" alt="" />
           </a>
           <div class="box-text">
