--- a/infant.html
+++ b/infant.html
@@ -121,6 +121,19 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img
+              src="./assets/infant/lots-of-cats-in-every-moment.webp"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Lots of Cats in Every Moment</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/infant/ratatouille.jpg" alt="" />
           </a>
           <div class="box-text">
