--- a/simulation.html
+++ b/simulation.html
@@ -108,6 +108,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/simulation/house-flipper.jpg" alt=""/>
+          </a>
+          <div class="box-text">
+            <h2>House Flipper</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/simulation/hunting-2008.jpg" alt=""/>
           </a>
             <div class="box-text">
