--- a/action.html
+++ b/action.html
@@ -274,6 +274,19 @@
         <div class="box">
           <a href="#">
             <img
+              src="./assets/action-adventure/lego-marvel-super-heroes-2.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>LEGO Marvel Super Heroes 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
               src="./assets/action-adventure/lego-pirates-of-the-caribbean.png"
               alt=""
             />
