--- a/racing.html
+++ b/racing.html
@@ -441,10 +441,20 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/motoGP-25.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>MotoGP 25</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/moto-GP-3.jpg" alt="" />
           </a>
           <div class="box-text">
-            <h2>Moto GP 3</h2>
+            <h2>MotoGP 3</h2>
             <h3>-</h3>
           </div>
         </div>
