--- a/shooting.html
+++ b/shooting.html
@@ -1019,6 +1019,19 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img
+              src="./assets/shooting/operation-flashpoint-red-river.webp"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Operation Flashpoint Red River</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/shooting/rambo-the-video-game.jpg" alt="" />
           </a>
           <div class="box-text">
