--- a/infant.html
+++ b/infant.html
@@ -145,6 +145,19 @@
         <div class="box">
           <a href="#">
             <img
+              src="./assets/infant/snoopy-and-the-great-mystery-club.png"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Snoopy and The Great Mystery Club</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
               src="./assets/infant/spongebob -squarepants-creature-from-the-krusty-krab.jpg"
               alt=""
             />
