--- a/simulation.html
+++ b/simulation.html
@@ -98,6 +98,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/simulation/furnish-master.webp" alt=""/>
+          </a>
+          <div class="box-text">
+            <h2>Furnish Master</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/simulation/house-builder.webp" alt=""/>
           </a>
           <div class="box-text">
