--- a/racing.html
+++ b/racing.html
@@ -660,6 +660,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/the-crew-2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>The Crew 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/trackmania-nations-forever.jpg" alt="" />
           </a>
           <div class="box-text">
