--- a/racing.html
+++ b/racing.html
@@ -481,6 +481,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/need-for-speed-heat.png" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Need for Speed Heat</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/need-for-speed-hot-pursuit.jpg" alt="" />
           </a>
           <div class="box-text">
